next version of web file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
      <title>Hello Angular</title>
    </head>
    <body>
-     <h1>Hello Angular student Rk! Fish the course fast!</h1>
+     <h1>Hello Angular student Rk! Finish the course fast!</h1>
    </body>
    </html>
